Update issue templates

--- a/.github/ISSUE_TEMPLATE/отчёт-о-баге.md
+++ b/.github/ISSUE_TEMPLATE/отчёт-о-баге.md
@@ -1,7 +1,7 @@
 ---
 name: Отчёт о баге
 about: Создайте отчёт об ошибке, чтобы артурка его пофиксил
-title: ''
+title: Кратко опишите ваш баг в названии
 labels: Баг
 assignees: ''
 
