--- a/.github/ISSUE_TEMPLATE/предложение.md
+++ b/.github/ISSUE_TEMPLATE/предложение.md
@@ -1,7 +1,7 @@
 ---
 name: Предложение
 about: Предложите идею для добавления
-title: ''
+title: Кратко опишите ваше предложение в названии
 labels: Идея для добавления
 assignees: ''
 
