Update issue templates

--- a/.github/ISSUE_TEMPLATE/отчёт-о-баге.md
+++ b/.github/ISSUE_TEMPLATE/отчёт-о-баге.md
@@ -11,6 +11,9 @@ assignees: ''
 
 Версия скрипта:
 
+Файл moonloader.log: 
+[Находясь на строчке выше перенесите файл из папки в это окно(этот текст удалите)]
+
 Описание бага:
 
 Шаги воспроизведения:
